--- a/HBD.css
+++ b/HBD.css
@@ -2,6 +2,7 @@ body{
     background-image: url("pic1.png")  ;
     height: fit-content;
     width: fit-content;
+    display: flex;
 }
 h1{
     margin-top:150px;
